--- a/.github/scripts/indexgen/source.template/coverage_report/main_table.html
+++ b/.github/scripts/indexgen/source.template/coverage_report/main_table.html
@@ -29,7 +29,7 @@
         </td>
 
         {% for key, numbers in cov_data.items() %}
-        {% set cov_color = get_color(numbers[0]) %}
+        {% set cov_color = get_color(numbers[0], numbers[1]) %}
 
         <td width={{ widths_arr[0] }}>
             <div class="container">
@@ -44,7 +44,8 @@
             </div>
         </td>
 
-        <td width={{ widths_arr[1] }} style="text-align: center; color: {{ cov_color }};">{{ numbers[0] }}</td>
+        <td width={{ widths_arr[1] }} style="text-align: center; color: {{ cov_color }};">{{ "——" if numbers[0] == "0.0%"
+            else numbers[0] }}</td>
 
         <td width={{ widths_arr[2] }} style="text-align: center;">
             {{ ((numbers[1]|int * ((numbers[0]|replace("%", "")|float) / 100))|int)|string }}
